Convert to maven project  - Generate jar-with-dependencies  - Java version 1.8
Use java.util.Base64 to implement
 doc.DocReader.readServerDoc
instead of deprecated com.sun API

TODO: test Applet usage